# speculative_decode_engine

./: README.md
.cursor/plans/: cuda_speculative_decode_port_2124c854.plan.md
benchmarks/: benchmark.py
cli/: benchmark.py
cuda/: CMakeLists.txt  Makefile  build.bat
cuda/include/: config.h  kernels.h  kv_cache.h  model.h  tokenizer.h  utils.h
cuda/src/: binding.cu  device_inference_bundle.cu  kernels.cu  kv_cache.cu  main.cu  model.cu  tokenizer.cu  utils.cu
tools/: export_model.py  hf_tok.py  tokenize.py
web/: README.md
web/backend/: requirements.txt  runner.py  server.py
web/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
web/frontend/src/: App.jsx  index.css
web/frontend/src/components/: CompareChart.jsx  ConfigPanel.jsx  ResultsPanel.jsx  SpecTimeline.jsx  SweepChart.jsx
